--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+# Created by https://www.gitignore.io/api/java,batch
+# Edit at https://www.gitignore.io/?templates=java,batch
 
-# Created by https://www.gitignore.io/api/java
-# Edit at https://www.gitignore.io/?templates=java
+### Batch ###
+# BatchFiles
+*.bat
+*.cmd
+*.btm
 
 ### Java ###
 # Compiled class file
@@ -27,4 +32,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# End of https://www.gitignore.io/api/java
+# End of https://www.gitignore.io/api/java,batch
